WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147166
Placing video in fullscreen caused WebKit crash at WebCore::Range::textQuads
https://bugs.webkit.org/show_bug.cgi?id=147166
Summary
Placing video in fullscreen caused WebKit crash at WebCore::Range::textQuads
Tim Horton
Reported
2015-07-21 15:14:20 PDT
Placing video in fullscreen caused WebKit crash at WebCore::Range::textQuads
Attachments
Patch
(1.74 KB, patch)
2015-07-21 15:15 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-07-21 15:15:17 PDT
Created
attachment 257208
[details]
Patch
Tim Horton
Comment 2
2015-07-21 15:18:07 PDT
http://trac.webkit.org/changeset/187128
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug