Placing video in fullscreen caused WebKit crash at WebCore::Range::textQuads https://bugs.webkit.org/show_bug.cgi?id=147166 <rdar://problem/21928558>

Reviewed by Simon Fraser.

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::getClippedVisibleTextRectangles):
Check the Range, as always.


Canonical link: https://commits.webkit.org/165207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187128 268f45cc-cd09-0410-ab3c-d52691b4dbfc